Moved compass config.rb into config dir; adjusted npm scripts to

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,6 +7,6 @@ autostart=true
 autorestart=true
 
 [program:compass-watch]
-command=compass watch --poll --app-dir /var/www -c /var/www/config.rb
+command=compass watch --poll --app-dir /var/www -c /var/www/config/compass.rb
 autostart=true
 autorestart=true
