VM provisioning improvements

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "prestart": "npm install",
     "start": "http-server -a 0.0.0.0 -p 8000 -c-1",
-    "watch": "bundle exec compass watch -c config/compass.rb",
+    "watch": "bundle exec compass watch --poll -c config/compass.rb",
     "compile": "bundle exec compass compile -c config/compass.rb",
     "build": "npm run compile"
   },
