--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,12 +1,13 @@
-[supervisord]
-nodaemon=false
-
 [program:node-server]
-command=/bin/bash -c "cd /var/www && npm start"
+directory=/var/www
+command=/usr/bin/npm start
+stopasgroup=true
 autostart=true
 autorestart=true
 
-[program:compass-watch]
-command=compass watch --poll --app-dir /var/www -c /var/www/config/compass.rb
+[program:node-watch]
+directory=/var/www
+command=/usr/bin/npm run watch
+stopasgroup=true
 autostart=true
 autorestart=true
