--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
   "license": "MIT",
   "scripts": {
     "prestart": "npm install",
-    "start": "http-server -a 0.0.0.0 -p 8000 -c-1",
+    "start": "node server",
+    "start-dev": "node server",
+    "pdf": "phantomjs pdf.js",
     "watch": "bundle exec compass watch --poll -c config/compass.rb",
     "compile": "bundle exec compass compile -c config/compass.rb",
-    "build": "npm run compile"
+    "build": "npm run compile && npm run pdf"
   },
   "devDependencies": {
     "bower": "^1.3.12",
-    "http-server": "^0.7.2"
+    "http-server": "^0.7.2",
+    "nodemon": "^1.2.1",
+    "phantomjs": "^1.9.12"
+  },
+  "dependencies": {
+    "ejs": "^1.0.0",
+    "express": "^4.10.0",
+    "nconf": "^0.6.9"
   }
 }
