--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ejs": "^1.0.0",
     "express": "^4.10.0",
+    "express-helpers": "^1.3.1",
     "nconf": "^0.6.9"
   }
 }
