--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,6 +2,7 @@
 directory=/var/www
 command=/usr/bin/npm start
 stopasgroup=true
+killasgroup=true
 autostart=true
 autorestart=true
 
@@ -9,5 +10,6 @@ autorestart=true
 directory=/var/www
 command=/usr/bin/npm run watch
 stopasgroup=true
+killasgroup=true
 autostart=true
 autorestart=true
