--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,6 @@
 directory=/var/www
 command=/usr/bin/npm start
 stopasgroup=true
-killasgroup=true
 autostart=true
 autorestart=true
 
@@ -10,6 +9,27 @@ autorestart=true
 directory=/var/www
 command=/usr/bin/npm run watch
 stopasgroup=true
-killasgroup=true
 autostart=true
 autorestart=true
+
+[unix_http_server]
+file=/tmp/supervisor.sock
+
+[supervisord]
+logfile=/tmp/supervisord.log
+logfile_maxbytes=50MB
+logfile_backups=10
+loglevel=info
+pidfile=/tmp/supervisord.pid
+nodaemon=false
+minfds=1024
+minprocs=200
+
+; the below section must remain in the config file for RPC
+; (supervisorctl/web interface) to work, additional interfaces may be
+; added by defining them in separate rpcinterface: sections
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
