More deployment fixes

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -5,6 +5,13 @@ autostart=true
 autorestart=true
 stopasgroup=true
 
+[program:node-staging-server]
+directory=/var/www
+command=/usr/bin/npm run start-staging
+autostart=true
+autorestart=true
+stopasgroup=true
+
 [unix_http_server]
 file=/tmp/supervisor.sock
 
