--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -1,12 +1,12 @@
 [program:node-server]
-directory=/var/www
+directory=/var/www/production/current
 command=/usr/bin/npm start
 autostart=true
 autorestart=true
 stopasgroup=true
 
 [program:node-staging-server]
-directory=/var/www
+directory=/var/www/staging/current
 command=/usr/bin/npm run start-staging
 autostart=true
 autorestart=true
@@ -16,7 +16,7 @@ stopasgroup=true
 file=/tmp/supervisor.sock
 
 [supervisord]
-logfile=/var/www/logs/supervisord.log
+logfile=/tmp/supervisord.log
 logfile_maxbytes=50MB
 logfile_backups=10
 loglevel=info
@@ -27,3 +27,6 @@ minprocs=200
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
