--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
     "prestart": "npm install",
     "prestart-dev": "npm install",
     "prebuild": "npm install",
-    "start": "NODE_ENV=production node server",
-    "start-staging": "NODE_ENV=staging node server",
-    "start-dev": "NODE_ENV=development node server",
+    "start": "NODE_ENV=production forever start server/index.js",
+    "start-staging": "NODE_ENV=staging forever start server/index.js",
+    "start-dev": "NODE_ENV=development forever start server/index.js",
+    "restart": "forever restartAll",
+    "stop": "forever stop server/index.js",
     "pdf": "phantomjs server/tools/generate-pdf.js",
     "watch": "bundle exec compass watch --poll -c config/compass.rb",
     "compile": "bundle exec compass compile -c config/compass.rb",
     "build": "npm run compile && npm run pdf"
   },
   "devDependencies": {
-    "bower": "^1.3.12"
   },
   "dependencies": {
     "ejs": "^1.0.0",
     "express": "^4.10.0",
     "express-helpers": "^1.3.1",
+    "forever": "^0.11.1",
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
     "nconf": "^0.6.9",
