--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "author": "Richard Willis",
   "license": "MIT",
   "scripts": {
-    "prestart": "npm install",
-    "prestart-dev": "npm install",
+    "prestart": "npm run setup",
+    "prestart-dev": "npm run setup",
     "prebuild": "npm install",
+    "setup":  "npm install && npm run stop",
     "start": "NODE_ENV=production forever start server/index.js",
     "start-staging": "NODE_ENV=staging forever start server/index.js",
     "start-dev": "NODE_ENV=development forever start server/index.js",
     "restart": "forever restartAll",
-    "stop": "forever stop server/index.js",
+    "stop": "forever stopall",
     "pdf": "phantomjs server/tools/generate-pdf.js",
     "watch": "bundle exec compass watch --poll -c config/compass.rb",
     "compile": "bundle exec compass compile -c config/compass.rb",
