--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "prestart": "npm run setup",
     "prestart-dev": "npm run setup",
+    "prestart-staging": "npm run setup",
     "prebuild": "npm install",
     "setup":  "npm install && npm run stop",
     "start": "NODE_ENV=production forever start server/index.js",
