--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "start-dev": "NODE_ENV=development forever start server/index.js",
     "restart": "forever restartAll",
     "stop": "forever stopall || true",
-    "pdf": "phantomjs server/tools/generate-pdf.js 8000 http://richardwillis.co/cv/pdf",
-    "pdf-staging": "phantomjs server/tools/generate-pdf.js 8001 http://staging.richardwillis.co/cv/pdf",
+    "pdf": "phantomjs server/tools/generate-pdf.js http://richardwillis.co/cv/pdf",
+    "pdf-staging": "phantomjs server/tools/generate-pdf.js http://staging.richardwillis.co/cv/pdf",
     "pdf-dev": "phantomjs server/tools/generate-pdf.js http://dev.richardwillis.co.local/cv/pdf",
     "watch": "bundle exec compass watch --poll -c config/compass.rb",
     "compile": "bundle exec compass compile -c config/compass.rb",
