--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start-staging": "NODE_ENV=staging forever start server/index.js",
     "start-dev": "NODE_ENV=development forever start server/index.js",
     "restart": "forever restartAll",
-    "stop": "forever stopall || true",
+    "stop": "forever stop server/index.js || true",
     "pdf": "phantomjs server/tools/generate-pdf.js http://richardwillis.co/cv/pdf",
     "pdf-staging": "phantomjs server/tools/generate-pdf.js http://staging.richardwillis.co/cv/pdf",
     "pdf-dev": "phantomjs server/tools/generate-pdf.js http://dev.richardwillis.co.local/cv/pdf",
