Forever uids for multiple forever processes

--- a/package.json
+++ b/package.json
@@ -8,23 +8,21 @@
   "author": "Richard Willis",
   "license": "MIT",
   "scripts": {
-    "prestart": "npm run setup",
-    "prestart-dev": "npm run setup",
-    "prestart-staging": "npm run setup",
+    "prestart": "npm run install && forever stop production || true",
+    "prestart-dev": "npm run setup && forever stop dev || true",
+    "prestart-staging": "npm run setup && forever stop staging || true",
     "prebuild": "npm install",
-    "setup":  "npm install && npm run stop",
-    "start": "NODE_ENV=production forever start server/index.js",
-    "start-staging": "NODE_ENV=staging forever start server/index.js",
-    "start-dev": "NODE_ENV=development forever start server/index.js",
-    "restart": "forever restartAll",
-    "stop": "forever stop server/index.js || true",
+    "start": "NODE_ENV=production forever start --uid \"production\" server/index.js",
+    "start-staging": "NODE_ENV=staging forever start --uid \"staging\" server/index.js",
+    "start-dev": "NODE_ENV=development forever start --uid \"dev\" server/index.js",
     "pdf": "phantomjs server/tools/generate-pdf.js http://richardwillis.co/cv/pdf",
     "pdf-staging": "phantomjs server/tools/generate-pdf.js http://staging.richardwillis.co/cv/pdf",
     "pdf-dev": "phantomjs server/tools/generate-pdf.js http://dev.richardwillis.co.local/cv/pdf",
     "watch": "bundle exec compass watch --poll -c config/compass.rb",
     "compile": "bundle exec compass compile -c config/compass.rb",
     "build": "npm run compile && npm run pdf",
-    "build-staging": "npm run compile && npm run pdf-staging"
+    "build-staging": "npm run compile && npm run pdf-staging",
+    "build-dev": "npm run compile && npm run pdf-dev"
   },
   "devDependencies": {
   },
