--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "author": "Richard Willis",
   "license": "MIT",
   "scripts": {
-    "prestart": "npm run install && forever stop production || true",
-    "prestart-dev": "npm run setup && forever stop dev || true",
-    "prestart-staging": "npm run setup && forever stop staging || true",
+    "prestart": "npm install && (forever stop production || true)",
+    "prestart-dev": "npm install && (forever stop dev || true)",
+    "prestart-staging": "npm install && (forever stop staging || true)",
     "prebuild": "npm install",
-    "start": "NODE_ENV=production forever start --uid \"production\" server/index.js",
-    "start-staging": "NODE_ENV=staging forever start --uid \"staging\" server/index.js",
-    "start-dev": "NODE_ENV=development forever start --uid \"dev\" server/index.js",
+    "start": "NODE_ENV=production forever --append --uid \"production\" start server/index.js",
+    "start-staging": "NODE_ENV=staging forever --append --uid \"staging\" start server/index.js",
+    "start-dev": "NODE_ENV=development forever --append --uid \"dev\" start server/index.js",
     "pdf": "phantomjs server/tools/generate-pdf.js http://richardwillis.co/cv/pdf",
     "pdf-staging": "phantomjs server/tools/generate-pdf.js http://staging.richardwillis.co/cv/pdf",
     "pdf-dev": "phantomjs server/tools/generate-pdf.js http://dev.richardwillis.co.local/cv/pdf",
