Copy fixes, responsive fixes, adjusted nginx config for dev

--- a/config/nginx/local/dev.richardwillis.co.local.conf
+++ b/config/nginx/local/dev.richardwillis.co.local.conf
@@ -18,17 +18,10 @@ server {
   # You can test if was set properly by using the `dig` command: dig yourdomain.com
   server_name dev.richardwillis.co.local;
 
+  sendfile off;
+
   # Timeout for closing keep-alive connections.
   keepalive_timeout 10;
-
-  # Enable gzip compression.
-  gzip on;
-  gzip_http_version 1.1;
-  gzip_vary on;
-  gzip_comp_level 6;
-  gzip_proxied any;
-  gzip_buffers 16 8k;
-  gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
   # Max upload size.
   # client_max_body_size 16M;
@@ -49,14 +42,7 @@ server {
   location ~ ^/(images/|img/|javascript/|js/|css/|stylesheets/|flash/|media/|static/|robots.txt|humans.txt|favicon.ico) {
     root /var/www/public;
     access_log off;
-    expires max;
-  }
-
-  # Enable caching of static files.
-  location ~* \.(css|js|gif|jpe?g|png)$ {
-    expires 168h;
-    add_header Pragma public;
-    add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    expires off;
   }
 
   location / {
