Correct regex for serving html files through nginx

--- a/config/nginx/staging.richardwillis.co.conf
+++ b/config/nginx/staging.richardwillis.co.conf
@@ -46,7 +46,7 @@ server {
   # }
 
   # Serve static files without going through upstreams
-  location ~ ^/(images/|img/|javascript/|js/|css/|stylesheets/|flash/|media/|static/|robots.txt|humans.txt|favicon.ico) {
+  location ~ ^/(.*\.html|images/|img/|javascript/|js/|css/|stylesheets/|flash/|media/|static/|robots.txt|humans.txt|favicon.ico) {
     root /var/www/staging/current/public;
     access_log off;
     expires max;
