--- a/config/nginx/local/dev.richardwillis.co.local.conf
+++ b/config/nginx/local/dev.richardwillis.co.local.conf
@@ -39,7 +39,7 @@ server {
   # }
 
   # Serve static files without going through upstreams
-  location ~ ^/(images/|img/|javascript/|js/|css/|stylesheets/|flash/|media/|static/|robots.txt|humans.txt|favicon.ico) {
+  location ~ ^/(.*\.html|images/|img/|javascript/|js/|css/|stylesheets/|flash/|media/|static/|robots.txt|humans.txt|favicon.ico) {
     root /var/www/public;
     access_log off;
     expires off;
