Better deployment npm scripts

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "license": "MIT",
   "scripts": {
     "install-bundles": "bundle install --path vendor/bundle",
-    "prestart": "npm install && (forever stop production || true)",
-    "prestart-dev": "npm install && (forever stop dev || true)",
-    "prestart-staging": "npm install && (forever stop staging || true)",
+    "prestart": "(forever stop production || true)",
+    "prestart-dev": "(forever stop dev || true)",
+    "prestart-staging": "(forever stop staging || true)",
     "prebuild": "npm install",
+    "prebuild-staging": "npm install",
+    "prebuild-dev": "npm install",
     "start": "NODE_ENV=production forever --append --uid \"production\" start server/index.js",
     "start-staging": "NODE_ENV=staging forever --append --uid \"staging\" start server/index.js",
     "start-dev": "NODE_ENV=development forever --append --uid \"dev\" start server/index.js",
