No colours when installing modules

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "prestart": "(forever stop production || true)",
     "prestart-dev": "(forever stop dev || true)",
     "prestart-staging": "(forever stop staging || true)",
-    "prebuild": "npm install",
-    "prebuild-staging": "npm install",
-    "prebuild-dev": "npm install",
+    "prebuild": "npm install --no-color",
+    "prebuild-staging": "npm install --no-color",
+    "prebuild-dev": "npm install --no-color",
     "start": "NODE_ENV=production forever --append --uid \"production\" start server/index.js",
     "start-staging": "NODE_ENV=staging forever --append --uid \"staging\" start server/index.js",
     "start-dev": "NODE_ENV=development forever --append --uid \"dev\" start server/index.js",
