--- a/config/nginx/local/staging.richardwillis.co.local.conf
+++ b/config/nginx/local/staging.richardwillis.co.local.conf
@@ -21,6 +21,8 @@ server {
   # Timeout for closing keep-alive connections.
   keepalive_timeout 10;
 
+    sendfile  off;
+
   # Enable gzip compression.
   gzip on;
   gzip_http_version 1.1;
@@ -52,11 +54,8 @@ server {
     expires max;
   }
 
-  # Enable caching of static files.
   location ~* \.(css|js|gif|jpe?g|png)$ {
-    expires 168h;
-    add_header Pragma public;
-    add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    expires 0;
   }
 
   location / {
