--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
     "nconf": "^0.6.9",
-    "phantomjs-prebuilt": "^2.1.7"
+    "phantomjs": "^1.9.12"
   }
 }
