Font-size fix for pdf and content update

--- a/config/nginx/local/richardwillis.co.local.conf
+++ b/config/nginx/local/richardwillis.co.local.conf
@@ -48,6 +48,7 @@ server {
   # Serve static files without going through upstreams
   location ~ ^/(.*\.html|images/|img/|javascript/|js/|css/|stylesheets/|flash/|media/|static/|robots.txt|humans.txt|favicon.ico) {
     root /var/www/public;
+    sendfile off;
     access_log off;
     expires max;
   }
